# telegram-sticker-search-bot

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build_musl.yml  build_nix.yml
scripts/: build-static.sh
src/: main.rs  model.rs  strings.rs
