[package]
name = "sticker-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1.17.0", features = [ "full" ] }
log = "0.4"
pretty_env_logger = "0.4.0"
itertools = "0.10"
chrono = "0.4"

teloxide = { version = "0.7", features = [ "macros" ] }
dptree = "0.1.0"
html-escape = "0.2.9"

sea-orm = { version = "0.6.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ], default-features = false }
